www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
/* This file will hold styles that are loaded using the same media query as the narrow grid. */


/*****************/
/* header region */
/*****************/

/* this should be unnecessary when we are done. */
.region-user-first-inner {
	display:none;
}

.region-user-second {
	height:30px;
}

#section-content {
	clear:both;
}*/

/****************
* specific body styles *
*****************/

.news-page-thumbnail-image {
	float:left;
	margin-right:10px;
	margin-bottom:5px;
	/*border:solid 1px #000;*/
}
.view-news-stories-by-date .view-content .views-row {
	margin-bottom:20px;
}
#campus-life-left {
	height:250px;
	width:inherit;
}
#student-activities-left {
	height:500px;
	width:inherit;
	color:inherit;
}

.view-lc-events .view-content .views-row {
	margin-bottom:15px;
}

#tour-flickr {
	width: 500px;
	height: 399px;
	border:3px solid #666;
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
	border-radius:8px;
	border-collapse:inherit;
	-moz-box-shadow:0 1px 3px #000;
	-webkit-box-shadow:0 1px 3px #000;
	box-shadow:0 1px 3px #000;
}
#tour-left { float:left; margin-right:30px; margin-bottom:30px; }
#tour-middle { float:left; margin-right:30px; }
#tour-right {}

/*****************/
/* footer region */
/*****************/

#region-footer-first, #region-footer-first div.content {
height:60px;
}


#region-footer-second {
	clear:both;
}

/*moved over from normal.css*/
/* This file will hold styles that are loaded using the same media query as the normal grid. */

body {
	background: #f9f9f9 url(../images/bg-body-top3.jpg) repeat-x top left;
}
.section-header {
	/*width:1500px;*/
	height:142px;
	margin:0 auto;
	padding:0;
	background: transparent url(../images/bg-header-arch.jpg) no-repeat top center;
	filter:none;
}

.region-user-second-inner {
	padding: 20px 0 0 10px;
}

.zone-branding {
	height: 47px;
}

.zone-menu-wrapper {
	background:none;
	filter:none;
	padding: 0;
}


h2.pane-title {
	font-size:20px;
	line-height:24px;
}

/******************************
 *  HOMEPAGE HEADER           *
 ******************************/

body.front {
	background:#f9f9f9 url(../images/home/bg-stripe-home1.jpg) repeat-x top left;
}

.front .section-header {
	margin:0 auto;
	height: 450px;
	background:transparent url(../images/home/big-image4.jpg) no-repeat top center;
 }

.front .section-content {
	background: transparent url(../images/home/convex-curve.png) no-repeat top center;
	margin:0 auto;
	margin-top:-23px;
 }

.front .zone-content-wrapper {
	background:#f9f9f9 url("../images/home/bg3-home.jpg") no-repeat bottom center;
	margin-top:-8px;
}



/**********************************************
 * TABS AND HOMEPAGE SPECIFIC CONTENT STYLES  *
 **********************************************/

/* A extra quicktabs content whitespace on normal view. */
.region-content .quicktabs_main {
	min-height:220px;
	padding:20px;
	margin:0;
}

/** Quicktab customizations for normal view ***/
/*#quicktabs-undergraduate_admission_tabs .item-list ul {
	width:380px;
}
#quicktabs-library_tabs .item-list ul {
	width:460px;
}
#quicktabs-undergraduate_admission_tabs ul li {
	background:none;
}
#quicktabs-undergraduate_admission_tabs ul li::after {
	background:none;
}

.pane-quicktabs-undergraduate-admission-tabs {
	width:380px;
	max-width:380px;
	margin-bottom:20px;
}
.pane-quicktabs-library-tabs {
	width:460px;
	max-width:460px;
}*/

.block-views-calendar-block-1 {
	margin:0 15px;
}

/****************************************/
/* JCarousel "What's Happening" News Rotator */


/**
 * original CSS and icons by Nathan Haug, included with JCarousel plugin
 * modified by KMB
 */

.pane-jcarousel-article-rotation {
	height:190px;
	overflow:hidden;
	padding-bottom:30px;
}

.jcarousel-skin-default {
	text-align: left;
	background: #ffffff; /* Old browsers */
	background: -moz-linear-gradient(top,  #ffffff 0%, #edeef2 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#edeef2)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #ffffff 0%,#edeef2 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #ffffff 0%,#edeef2 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #ffffff 0%,#edeef2 100%); /* IE10+ */
	background: linear-gradient(top,  #ffffff 0%,#edeef2 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#edeef2',GradientType=0 ); /* IE6-9 */
}

.jcarousel-skin-default .jcarousel-container-horizontal {
	width: 850px;
	height: 190px;
	padding: 20px 40px 20px 40px;
	margin: auto;
	overflow:hidden;
}

.jcarousel-skin-default .jcarousel-clip-horizontal {
	width: 850px;
	overflow: hidden;
}

.jcarousel-skin-default .jcarousel-item {
	padding: 0;
	height: 180px;
	overflow: hidden;
	list-style: none;
	background: #fff none;
}

.jcarousel-skin-default .jcarousel-item-horizontal {
	margin: 0 4px 0px 4px;
}
/* Buttons*/
.jcarousel-skin-default .jcarousel-next,
.jcarousel-skin-default .jcarousel-prev {
	display: block;
	width: 33px;
	height: 33px;
	background-image: url("../images/home/arrows.png");
}

.jcarousel-skin-default .jcarousel-next-disabled,
.jcarousel-skin-default .jcarousel-prev-disabled {
	display: none;
}

/*Horizontal Buttons */
.jcarousel-skin-default .jcarousel-prev-horizontal {
	position: absolute;
	top: 90px;
	left: 10px;
	background-position: 0 0;
	margin-left:-15px;
}
.jcarousel-skin-default .jcarousel-prev-horizontal:hover {
	background-position: -32px 0;
}
.jcarousel-skin-default .jcarousel-prev-horizontal:active {
	background-position: -64px 0;
}

.jcarousel-skin-default .jcarousel-next-horizontal {
	position: absolute;
	top: 90px;
	right: 10px;
	background-position: 0 -32px;
	margin-right:-15px;
}
.jcarousel-skin-default .jcarousel-next-horizontal:hover {
	background-position: -32px -32px;
}
.jcarousel-skin-default .jcarousel-next-horizontal:active {
	background-position: -64px -32px;
}



/* Content Items */

.jcarousel li, .views-field-field-image {
	width:260px;
}

.jcarousel .views-field-field-image {
	border:none;
}

.jcarousel .views-field-field-image:hover {
	margin-bottom:-96px;
}
.jcarousel .views-field-body:hover {
	margin-top:-96px;
}

.jcarousel .views-field-body {
	position:relative;
	margin-bottom:10px;
	padding:10px 10px 20px 10px;
	width:260px;
	background:transparent url(../images/home/alpha-gray.png);
	color:#c6c6c6;
	/*-webkit-transition:all 1.0s ease-in-out;
	-moz-transition:all 1.0s ease-in-out;
	-o-transition:all 1.0s ease-in-out;
	-ms-transition:all 1.0s ease-in-out;	
	transition:all 1.0s ease-in-out;*/
}

.jcarousel .views-field-view-node { display:none; }

